--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,1 +1,12 @@
 // Import des différentes parties de la structure
+
+@use './base/_reset';
+@use './base/_typography';
+
+@use './components/_navBar';
+@use './components/_banner';
+@use './components/_Card';
+@use './components/_footer';
+
+@use './pages/_home';
+@use './pages/_notFound';
