--- a/src/sass/components/_Card.scss
+++ b/src/sass/components/_Card.scss
@@ -2,7 +2,7 @@
   background-color: #F6F6F6;
   border-radius: 25px;
   margin: 45px 100px;
-  height: 829px;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 80px;
@@ -11,16 +11,39 @@
 }
 
 .cardBox {
+  position: relative;
   height: 340px;
   width: 340px;
-  background-color: #FF6060;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: column-reverse;
+  cursor: pointer;
+
+  img {
+    position: absolute;
+    z-index: 1;
+    object-fit: cover;
+    height: 100%;
+    border-radius: 25px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+  }
 
   h2 {
+    position: absolute;
     color: #FFF;
     font-size: 18px;
     margin: 20px;
+    margin: 20px;
+    bottom: 0;
+    z-index: 2;
   }
+}
+
+.cardBox::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  border-radius: 25px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
 }
