update : Housing Pages / Carousel & Profile Components / Style scss

--- a/src/sass/components/_collapse.scss
+++ b/src/sass/components/_collapse.scss
@@ -13,6 +13,12 @@
     font-size: 24px;
     padding: 10px 0px 10px 10px;
   }
+
+  img {
+    height: 100%;
+    margin: auto 0;
+    padding-right: 10px;
+  }
 }
 
 .collapseContain {
