--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,9 @@
 @use './components/_banner';
 @use './components/_card';
 @use './components/_collapse';
+@use './components/_carousel';
 @use './components/_tags';
+@use './components/_profile';
 @use './components/_footer';
 
 @use './pages/_home';
