--- a/src/sass/pages/_housingLayout.scss
+++ b/src/sass/pages/_housingLayout.scss
@@ -6,11 +6,7 @@
   margin-bottom: 50px;
 }
 
-.tagsLayout {
-  display: flex;
-  gap: 10px;
-  margin: 20px 100px 0px 100px;
-}
+
 
 .headerLayout {
   display: flex;
@@ -28,5 +24,20 @@
   h2 {
     font-size: 18px;
     font-weight: 500;
+  }
+}
+
+.tagsRating {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 100px 0px 100px;
+
+  .tagsLayout {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .rating {
+    display: flex;
   }
 }
