--- a/src/sass/pages/_housingLayout.scss
+++ b/src/sass/pages/_housingLayout.scss
@@ -6,12 +6,10 @@
   margin-bottom: 50px;
 }
 
-
-
 .headerLayout {
   display: flex;
   justify-content: space-between;
-  margin: 0px 100px;
+  margin: 30px 100px 0px 100px;
 }
 
 .titleLocation {
