--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -12,6 +12,7 @@
     color: #FFF;
     text-shadow: 4px 4px rgba(0, 0, 0, 0.25);
     font-size: 48px;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
 
   .bannerPicture {
@@ -22,20 +23,12 @@
     filter: brightness(60%);
     box-shadow: 0px 4px 4px 0px #00000040;
   }
-}
-
-/* .bannerDivOverlay {
-  margin: 0px 100px 0px 100px;
-  position: absolute;
-  top: 7em;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  mix-blend-mode: darken;
 
   .bannerOverlayPicture {
     width: 100%;
     height: 223px;
     border-radius: 25px;
+    position: absolute;
+    opacity: 30%;
   }
-} */
+}
