--- a/src/sass/components/_Card.scss
+++ b/src/sass/components/_Card.scss
@@ -1,7 +1,7 @@
 .cardContainer {
   background-color: #F6F6F6;
   border-radius: 25px;
-  margin: 45px 100px;
+  margin: 45px 0px;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -46,4 +46,28 @@
   z-index: 2;
   border-radius: 25px;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+}
+
+
+@media (max-width: 375px) {
+  .cardContainer {
+    background-color: #ffffff;
+    border-radius: 0px;
+    padding: 0px;
+    margin: 0px 0px 27px 0px;
+    gap: 20px;
+  }
+  
+  .cardBox {
+    height: 255px;
+    width: 335px;
+
+    img {
+      border-radius: 10px;
+    }
+  }
+
+  .cardBox::before {
+    border-radius: 10px;
+  }
 }
