--- a/src/sass/components/_profile.scss
+++ b/src/sass/components/_profile.scss
@@ -18,3 +18,17 @@
     height: 80px;
   }
 }
+
+@media (max-width: 375px) {
+  .profileDivPicture {
+  
+    h3 {
+      font-size: 12px;
+    }
+  
+    img {
+      width: 32px;
+      height: 32px;
+    }
+  }
+}
