--- a/src/sass/components/_Card.scss
+++ b/src/sass/components/_Card.scss
@@ -1,3 +1,5 @@
+/* CardContainer.jsx */
+
 .cardContainer {
   background-color: #F6F6F6;
   border-radius: 25px;
@@ -10,13 +12,15 @@
   padding: 56px 50px;
 }
 
+
+/* Card.jsx */
 .cardBox {
   position: relative;
   height: 340px;
   width: 340px;
   cursor: pointer;
 
-  img {
+  &__picture {
     position: absolute;
     z-index: 1;
     object-fit: cover;
@@ -25,7 +29,7 @@
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
   }
 
-  h2 {
+  &__title {
     position: absolute;
     color: #FFF;
     font-size: 18px;
@@ -48,7 +52,7 @@
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
 }
 
-
+/* mobile */
 @media (max-width: 375px) {
   .cardContainer {
     background-color: #ffffff;
@@ -62,7 +66,7 @@
     height: 255px;
     width: 335px;
 
-    img {
+    &__picture {
       border-radius: 10px;
     }
   }
