--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -1,4 +1,4 @@
-.bannerDivPicture {
+.bannerContent {
   position: relative;
   display: flex;
   justify-content: center;
@@ -6,7 +6,7 @@
   margin-bottom: 43px;
   margin: 45px 0px;
 
-  h1 {
+  &__title {
     position: absolute;
     z-index: 1;
     color: #FFF;
@@ -15,7 +15,7 @@
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
 
-  .bannerPicture {
+  &__picture {
     width: 100%;
     height: 223px;
     object-fit: cover;
@@ -24,7 +24,7 @@
     box-shadow: 0px 4px 4px 0px #00000040;
   }
 
-  .bannerOverlayPicture {
+  &__overlayPicture {
     width: 100%;
     height: 223px;
     border-radius: 25px;
@@ -33,11 +33,12 @@
   }
 }
 
+/* mobile */
 @media (max-width: 375px) {
-  .bannerDivPicture {
+  .bannerContent {
     margin: 27px 0px 22px 0px;
   
-    h1 {
+    &__title {
       text-shadow: none;
       font-size: 24px;
       width: 70%;
@@ -45,12 +46,12 @@
       margin-left: 16px;
     }
   
-    .bannerPicture {
+    &__picture {
       height: 111px;
       border-radius: 10px;
     }
   
-    .bannerOverlayPicture {
+    &__overlayPicture {
       height: 111px;
       border-radius: 10px;
     }
