--- a/src/sass/pages/_notFound.scss
+++ b/src/sass/pages/_notFound.scss
@@ -7,18 +7,40 @@
   margin: 139px 0;
   color: #FF6060;
 
-  h1 {
+  &__title {
     font-size: 12em;
   }
 
-  h2 {
+  &__subtitle {
     font-size: 36px;
   }
 
-  h5 {
+  &__backToHome {
     font-size: 18px;
     font-weight: 500;
     color: #000;
     text-decoration: underline;
   }
+}
+
+/* mobile */
+@media (max-width: 375px) {
+  .notFoundContainer {
+    margin: 113px 0px;
+
+    &__title {
+      font-size: 100px;
+    }
+
+    &__subtitle {
+      font-size: 18px;
+      width: 80%;
+      text-align: center;
+    }
+
+    &__backToHome {
+      font-size: 14px;
+    }
+  }
+  
 }
