--- a/src/sass/components/_Card.scss
+++ b/src/sass/components/_Card.scss
@@ -1,42 +1,42 @@
-/* CardContainer.jsx */
+@use '../abstracts/variables' as var;
 
+/* CardContainer.jsx */
 .cardContainer {
-  background-color: #F6F6F6;
-  border-radius: 25px;
-  margin: 45px 0px;
+  gap: 80px;
   height: 100%;
   display: flex;
-  flex-wrap: wrap;
-  gap: 80px;
   row-gap: 70px;
+  flex-wrap: wrap;
+  margin: 45px 0px;
   padding: 56px 50px;
+  border-radius: 25px;
+  background-color: var.$background-color;
 }
 
 
 /* Card.jsx */
 .cardBox {
-  position: relative;
-  height: 340px;
   width: 340px;
+  height: 340px;
   cursor: pointer;
+  position: relative;
 
   &__picture {
-    position: absolute;
     z-index: 1;
-    object-fit: cover;
     height: 100%;
+    object-fit: cover;
+    position: absolute;
     border-radius: 25px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+    background: var.$linear-gradient;
   }
 
   &__title {
-    position: absolute;
-    color: #FFF;
-    font-size: 18px;
-    margin: 20px;
-    margin: 20px;
     bottom: 0;
     z-index: 2;
+    margin: 20px;
+    font-size: 18px;
+    position: absolute;
+    color: var.$white-color;
   }
 }
 
@@ -45,26 +45,26 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 2;
   width: 100%;
   height: 100%;
-  z-index: 2;
   border-radius: 25px;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
+  background: var.$linear-gradient;
 }
 
 /* mobile */
 @media (max-width: 375px) {
   .cardContainer {
-    background-color: #ffffff;
-    border-radius: 0px;
-    padding: 0px;
-    margin: 0px 0px 27px 0px;
     gap: 20px;
+    padding: 0px;
+    border-radius: 0px;
+    margin: 0px 0px 27px 0px;
+    background-color: var.$white-color;
   }
   
   .cardBox {
-    height: 255px;
     width: 335px;
+    height: 255px;
 
     &__picture {
       border-radius: 10px;
