--- a/src/sass/components/_carousel.scss
+++ b/src/sass/components/_carousel.scss
@@ -1,48 +1,48 @@
+@use '../abstracts/variables' as var;
+@use '../abstracts/mixins' as mixins;
+
 .carousel {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   min-height: 415px;
   position: relative;
+  flex-direction: column;
+  @include mixins.flex-center;
 
   &__arrowBack {
-    position: absolute;
     left: 10px;
     cursor: pointer;
+    position: absolute;
   }
 
   &__arrowNext {
-    position: absolute;
     right: 10px;
     cursor: pointer;
+    position: absolute;
   }
 
   &__picture {
-    height: 415px;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 25px;
-
-    position: absolute;
     z-index: -1;
+    width: 100%;
+    height: 415px;
+    object-fit: cover;
+    position: absolute;
+    border-radius: 25px;
     object-position: center;
   }
 
   &__nbr {
-    position: absolute;
-    bottom: 10px;
-    color: #FFF;
     font-size: 18px;
+    bottom: 10px;
     font-weight: 500;
+    position: absolute;
+    color: var.$white-color;
   }
 }
 
 /* mobile */
 @media (max-width: 375px) {
   .carousel {
-    margin: 27px 0px 0px 0px;
     min-height: 256px;
+    margin: 27px 0px 0px 0px;
 
     &__picture {
       height: 255px;
