--- a/src/sass/components/_collapse.scss
+++ b/src/sass/components/_collapse.scss
@@ -1,18 +1,18 @@
 @use '../abstracts/variables' as var;
+@use '../abstracts/mixins' as mixins;
 
 .collapseContainer {
   margin-bottom: 45px;
   width: 100%;
   
   &__collapse {
-    background-color: var.$primary-color;
-    display: flex;
-    justify-content: space-between;
+    @include mixins.flex-between;
     border-radius: 5px;
+    background-color: var.$primary-color;
 
     &__title {
-      color: var.$white-color;
       font-size: 24px;
+      color: var.$white-color;
       padding: 10px 0px 10px 10px;
     }
 
@@ -24,9 +24,9 @@
   }
 
   &__collapseContent {
-    background-color: var.$collapse-color;
     font-size: 18px;
     padding: 16px 20px 20px 20px;
+    background-color: var.$collapse-color;
   }
 }
 
