fix responsive Home

--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -10,6 +10,7 @@
   &__title {
     z-index: 1;
     font-size: 48px;
+    margin: 0px 18px;
     position: absolute;
     color: var.$white-color;
     text-shadow: 4px 4px var.$shadow-color;
