--- a/src/sass/components/_Card.scss
+++ b/src/sass/components/_Card.scss
@@ -4,25 +4,26 @@
 .cardContainer {
   gap: 80px;
   height: 100%;
-  display: flex;
-  row-gap: 70px;
-  flex-wrap: wrap;
   margin: 45px 0px;
   padding: 56px 50px;
   border-radius: 25px;
   background-color: var.$background-color;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  
 }
 
 
 /* Card.jsx */
 .cardBox {
-  width: 340px;
+  width: 100%;
   height: 340px;
   cursor: pointer;
   position: relative;
 
   &__picture {
     z-index: 1;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     position: absolute;
@@ -60,10 +61,11 @@
     border-radius: 0px;
     margin: 22px 0px 27px 0px;
     background-color: var.$white-color;
+    display: flex;
+    flex-direction: column;
   }
   
   .cardBox {
-    width: 280px;
     height: 255px;
 
     &__picture {
